feat: Make workspaceId required for project create
