# src/slingshot/api/projects.py
@@ -45,10 +45,10 @@ class ProjectAPI:
     def create(
         self,
         name: str,
+        workspaceId: str,
         app_id: Optional[str] = UNSET,
         cluster_path: Optional[str] = UNSET,
         job_id: Optional[str] = UNSET,
-        workspaceId: Optional[str] = UNSET,
         subscriptionId: Optional[str] = UNSET,
         description: Optional[str] = UNSET,
         cluster_log_url: Optional[str] = UNSET,
@@ -60,12 +60,12 @@ class ProjectAPI:
 
         Args:
             name (str): The name of the project.
+            workspaceId (str): The workspace ID.
             settings (ProjectAdditionalSettingsSchema): A object for
             additional settings.
             app_id (Optional[str], optional): The application ID.
             cluster_path (Optional[str], optional): The path to the cluster.
             job_id (Optional[str], optional): The job ID.
-            workspaceId (Optional[str], optional): The workspace ID.
             subscriptionId (Optional[str], optional): The subscription ID.
             description (Optional[str], optional): A description for the project.
             cluster_log_url (Optional[str], optional): The URL for cluster logs.
@@ -79,7 +79,7 @@ class ProjectAPI:
             ProjectSchema: The details of the newly created project.
 
         """
-        json: JSON_TYPE = {"name": name}
+        json: JSON_TYPE = {"name": name, "workspaceId": workspaceId}
 
         if app_id is not UNSET:
             json["app_id"] = app_id
@@ -87,8 +87,6 @@ class ProjectAPI:
             json["cluster_path"] = cluster_path
         if job_id is not UNSET:
             json["job_id"] = job_id
-        if workspaceId is not UNSET:
-            json["workspaceId"] = workspaceId
         if subscriptionId is not UNSET:
             json["subscriptionId"] = subscriptionId
         if description is not UNSET:
